# lab3_csa

./: .coverage  .gitignore  .gitlab-ci.yml  docker-compose.yaml  integration_test.py  intergration_test.py  pyproject.toml  pytest.ini  readme.md
.gihub/workflows/: py-app.yml
.github/workflows/: py-app.yml
golden/: cat.yml  hello.yml  input.txt  prob1.yml  test.asm  test.txt
interpreter/: __init__.py  __main__.py  compiler.py  entities.py
machine/: __init__.py  __main__.py  interpreter.py  isa.py
